protocolmodel/mcrl2/testing/errors/error_3001.mcf
% E3001 - No mutually supported protocol version
[true* . ERROR_MSG(E3001)] false